--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 ---
-layout: layout
-title: Jekyll Base
+layout: base
+title: anderegg.ca
 ---
 
 <div class="content">
-  <div class="related">
-    <ul>
-      {% for post in site.posts %}
-      <li>
-	<span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
-      </li>
-      {% endfor %}
-    </ul>
-  </div>
+	<div class="related">
+		<ul>
+			{% for post in site.posts limit:1 %}
+			<li>
+				<span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+			</li>
+			{% endfor %}
+		</ul>
+	</div>
 </div>
