--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: anderegg.ca
 <div class="content">
 	<div class="related">
 		<ul>
-			{% for post in site.posts limit:1 %}
+			{% for post in site.posts %}
 			<li>
 				<span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
 			</li>
