Pretty much there!

--- a/about/index.html
+++ b/about/index.html
@@ -3,4 +3,8 @@ layout: base
 title: About
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h1>Hi!</h1>
+
+<p>I&#8217;m Gavin Anderegg. I bill myself primarily as a software developer, but I also love Unix server administration and graphic design. I'm currently working at <a href="http://mtlpr.ca/">MT&amp;L Public Relations</a> in <a href="http://local.google.ca/maps?&amp;q=Halifax,+Nova+Scotia">Halifax, Nova Scotia</a>. You can find me on <a href="https://twitter.com/gavinanderegg">Twitter</a>, <a href="https://github.com/gavinanderegg">GitHub</a>, and  <a href="https://alpha.app.net/gavinanderegg">Alpha</a>.</p>
+
+<p>This blog runs on <a href="https://github.com/mojombo/jekyll/">Jekyll</a> and is hosted on <a href="http://pages.github.com/">Github Pages</a>. It&#8217;s a place for me to ramble about tech and game news, muse about new learnings, and provide motivation for working on current projects.</p>
