--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@ layout: base
 title: anderegg.ca
 ---
 
-<div class="content">
-	<div class="related">
-		<ul>
-			{% for post in site.posts %}
-			<li>
-				<span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
-			</li>
-			{% endfor %}
-		</ul>
-	</div>
-</div>
+<div id="frontPost">
+				{% for post in site.posts | limit:1 %}
+					<article>
+						<h1>{{ post.title }}</h1>
+						<h2 class="date">{{ post.date | date: "%B %d, %Y" }}</h2>
+						{{ post.content }}
+					</article>
+				{% endfor %}
+				</div>
+				
+				<div class="readMore">
+					<a href="/archives/">More articles &raquo;</a>
+				</div>
