--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,6 @@ title: About
 
 <h1>Hi!</h1>
 
-<p>I&#8217;m Gavin Anderegg. I bill myself primarily as a software developer, but I also love Unix server administration and graphic design. I'm currently working at <a href="http://mtlpr.ca/">MT&amp;L Public Relations</a> in <a href="http://local.google.ca/maps?&amp;q=Halifax,+Nova+Scotia">Halifax, Nova Scotia</a>. You can find me on <a href="https://twitter.com/gavinanderegg">Twitter</a>, <a href="https://github.com/gavinanderegg">GitHub</a>, and  <a href="https://alpha.app.net/gavinanderegg">Alpha</a>.</p>
+<p>I&#8217;m Gavin Anderegg. I bill myself primarily as a software developer, but I also love Unix server administration and graphic design. I'm currently working at <a href="http://www.national.ca/">NATIONAL</a> in <a href="https://en.wikipedia.org/wiki/Halifax,_Nova_Scotia">Halifax, Nova Scotia</a>. You can find me on <a href="https://twitter.com/gavinanderegg">Twitter</a>, <a href="https://github.com/gavinanderegg">GitHub</a>, and  <a href="https://stackexchange.com/users/251148/gavin-anderegg?tab=accounts">StackExchange</a>.</p>
 
 <p>This blog runs on <a href="https://github.com/mojombo/jekyll/">Jekyll</a> and is hosted on <a href="http://pages.github.com/">Github Pages</a>. It&#8217;s a place for me to ramble about tech and game news, muse about new learnings, and provide motivation for working on current projects.</p>
