Adding links and slides

--- a/wc2017/index.html
+++ b/wc2017/index.html
@@ -13,6 +13,9 @@ title: anderegg.ca
 			<li>
 				<a href="https://github.com/gavinanderegg/pyoa">Press Your Own Adventure code</a>
 			</li>
+			<li>
+				<a href="https://paw.cloud/">Paw REST API tool</a>
+			</li>
 		</ul>
 	</div>
 </div>
