Actually adding slide link

--- a/wc2017/index.html
+++ b/wc2017/index.html
@@ -16,6 +16,9 @@ title: anderegg.ca
 			<li>
 				<a href="https://paw.cloud/">Paw REST API tool</a>
 			</li>
+			<li>
+				<a href="./WordCamp2017.pdf">Slides</a>
+			</li>
 		</ul>
 	</div>
 </div>
