--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: anderegg.ca
 ---
 
 <div id="frontPost">
-				{% for post in site.posts | limit:1 %}
+				{% for post in site.posts limit:1 %}
 					<article>
 						<h1>{{ post.title }}</h1>
 						<h2 class="date">{{ post.date | date: "%B %d, %Y" }}</h2>
