Refactoring projects section and adding Flake

--- a/projects/index.html
+++ b/projects/index.html
@@ -5,20 +5,27 @@ title: Projects
 
 <h1>Projects</h1>
 
-<hr>
+<section class="projects">
+    <div class="item">
+        <h2><a href="/projects/play-and-give/">MT&L: Play and Give (2010)</a></h2>
+        <div class="description">A virtual holiday card for clients of MT&L.</div>
+    </div>
+    <div class="item">
+        <h2><a href="/projects/flake/">Flake (2011)</a></h2>
+        <div class="description">A simple pixel poking snowflake demo with <code>&lt;canvas&gt;</code></div>
+    </div>
+</section>
 
-<h2>MT&L: Play and Give (2010)</h2>
+<style>
+    #content .projects .item h2 {
+        font-size: 1.2em;
+    }
 
-<div><a href="https://scrooge.anderegg.ca"><img src="./scrooge.png" alt="A screenshot from the Play and Give holiday card"></a></div>
+    .projects .item {
+        padding: 1.2em 0.8em;
+    }
 
-<p>A digital holiday card for clients of MT&L (now NATIONAL Public Relations – Halifax). This was a project with creative direction from <a href="https://www.linkedin.com/in/paul-williams-145b7986/">Paul Williams</a>, design/illustration by <a href="https://www.samiracle.design">Samira Saoud</a>, writing/scenario design by <a href="https://www.linkedin.com/in/jennifer-beck-667b4535/">Jennifer Beck</a>. I did the development and integration.</p>
-
-<p>We worked together as a group for project brainstorming. We knew we wanted to do something interesting on the web, and eventually landed on the idea of building a small "game". I thought something in the point-and-click space would be pretty easy to build. Having done some work in Flash, this was my first JavaScript-based game-like thing, and I was pretty happy with how it worked out.</p>
-
-<p>In the original version, people could vote where they'd like a donation to go once they finish the game. This was handled by a simple Django app that tallied votes, which we used to manually distribute the donation after the fact. I kept the voting popup as-is, though most of the links no longer work and the voting is stubbed out.</p>
-
-<h3><a href="https://scrooge.anderegg.ca">Play the game!</a></h3>
-
-
-
-<hr>
+    .projects .item:nth-child(even) {
+        background: #212126;
+    }
+</style>
