--- a/projects/index.html
+++ b/projects/index.html
@@ -7,12 +7,16 @@ title: Projects
 
 <section class="projects">
     <div class="item">
-        <h2><a href="/projects/play-and-give/">MT&L: Play and Give (2010)</a></h2>
-        <div class="description">A virtual holiday card for clients of MT&L.</div>
+        <h2><a href="/projects/flake/">Coffee Quest (2014)</a></h2>
+        <div class="description">A simple web-based game built at a 12-hour hackathon.</div>
     </div>
     <div class="item">
         <h2><a href="/projects/flake/">Flake (2011)</a></h2>
-        <div class="description">A simple pixel poking snowflake demo with <code>&lt;canvas&gt;</code></div>
+        <div class="description">A simple pixel poking snowflake demo with <code>&lt;canvas&gt;</code>.</div>
+    </div>
+    <div class="item">
+        <h2><a href="/projects/play-and-give/">MT&L: Play and Give (2010)</a></h2>
+        <div class="description">A virtual holiday card for clients of MT&L.</div>
     </div>
 </section>
 
