--- a/projects/coffee-quest/index.html
+++ b/projects/coffee-quest/index.html
@@ -9,5 +9,7 @@ title: Projects - Coffee Quest (2014)
 
 <p>Coffee Quest is a web-based game about business and caffeine. You move using the arrow keys, and want to traverse the map from the top-left corner to the bottom-right. Each screen is a new town for you to exploit for monetary gain, but you can't business without caffeine! Each deal will drain you of awakeness, and the only cure is more coffee. Coffee costs money, so you must carefully balance your actions to ensure you don't run out of cash or caffeine. Financial institutions are tricky: you may gain interest, or lose money from taxation. Eventually you'll run out of energy, but the overall goal is your high score.</p>
 
+<p>The game was developed by Chris Whalen, <a href="https://shamuspeveril.com">Shamus Peveril</a>, and me at a 12-hour Hackathon at put on by <a href="https://mindsea.com">MindSea</a> while I worked there.</p>
+
 <h3><a href="http://www.anderegg.ca/coffeeQuest/">You can play the game here!</a></h3>
 
