--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,10 @@ title: Projects
 
 <section class="projects">
     <div class="item">
+        <h2><a href="/projects/compliments/">Compliments (2015)</a></h2>
+        <div class="description">A compliment generator, as requested by some coworkers.</div>
+    </div>
+    <div class="item">
         <h2><a href="/projects/flake/">Coffee Quest (2014)</a></h2>
         <div class="description">A simple web-based game built at a 12-hour hackathon.</div>
     </div>
