Update to comp desc

--- a/projects/compliments/index.html
+++ b/projects/compliments/index.html
@@ -9,6 +9,6 @@ title: Projects - Compliments (2015)
 
 <p>For a while at NATIONAL we had a vase full of tiny pieces of paper with compliments on them. The idea was that people could add new compliments to the vase and others would randomly draw compliments out of it. I wanted to build a virtual version, and replicated the compliments I'd seen. I also had a simple form where people could request new compliments get added. This was originally hosted at "compliments.website", but I let the domain lapse.</p>
 
-<p>This was written pretty quickly and was mostly a quick way to play around with <a href="https://en.wikipedia.org/wiki/Parse,_Inc.">Parse</a>. Parse was a really nice platform, and I liked it much more than the competition before it was killed off by Meta (then Facebook).</p>
+<p>This was written pretty quickly and was mostly a quick way to play around with <a href="https://en.wikipedia.org/wiki/Parse,_Inc.">Parse</a>. Parse was a really nice platform, and I liked it much more than the competition before it was killed off by Meta (then Facebook). For this version, I generated some random compliments and stuffed them in a JSON file to approximate the list that was in Parse.</p>
 
 <h3><a href="https://anderegg.ca/compliments/">Grab a compliment!</a></h3>
