--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@ title: Projects
         <div class="description">A compliment generator, as requested by some coworkers.</div>
     </div>
     <div class="item">
-        <h2><a href="/projects/flake/">Coffee Quest (2014)</a></h2>
+        <h2><a href="/projects/coffee-quest/">Coffee Quest (2014)</a></h2>
         <div class="description">A simple web-based game built at a 12-hour hackathon.</div>
     </div>
     <div class="item">
