Also fixing the title :P

--- a/projects/coffee-quest/index.html
+++ b/projects/coffee-quest/index.html
@@ -3,7 +3,7 @@ layout: project
 title: Projects - Coffee Quest (2014)
 ---
 
-<h1>Flake (2011)</h1>
+<h1>Coffee Quest (2014)</h1>
 
 <div><a href="http://www.anderegg.ca/coffeeQuest/"><img src="./coffeeQuest.png" alt="A screenshot of a game of Coffee Quest in progress. The player stands at the bottom right of a grid of floor, coffee/espresso shop, bank, deal and wall tiles. The player is about to complete the second level."></a></div>
 
