--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ title: anderegg.ca
 ---
 
 <div id="frontPost">
-				{% for post in site.posts limit:1 %}
+				{% for post in site.posts limit:8 %}
 					<article>
-						<h2>{{ post.title }}</h2>
+						<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 						<h3 class="date">{{ post.date | date: "%B %e, %Y" }}</h3>
-						{{ post.content }}
+						{{ post.excerpt }}
+						<p class="readmore"><a href="{{ post.url }}">Read more »</a></p>
 					</article>
 				{% endfor %}
 				</div>
@@ -16,3 +17,24 @@ title: anderegg.ca
 				<div class="readMore">
 					<a href="/archives/">More articles &raquo;</a>
 				</div>
+
+				<style>
+					#frontPost {
+						h2 a {
+							color: #DDD;
+							text-decoration: none;
+						}
+
+						article {
+							padding-bottom: 3.8em;
+
+							&:last-of-type {
+								padding-bottom: 0;
+							}
+
+							.readmore {
+								margin: 0;
+							}
+						}
+					}
+				</style>
