More edits + project section post

--- a/projects/index.html
+++ b/projects/index.html
@@ -7,17 +7,25 @@ title: Projects
 
 <section class="projects">
     <div class="item">
+        <h2><a href="/projects/bsky-filter/">Bluesky Filter</a></h2>
+        <div class="description">A simple demo app for filtering the Bluesky data firehose.</div>
+    </div>
+
+    <div class="item">
         <h2><a href="/projects/compliments/">Compliments</a></h2>
         <div class="description">A compliment generator, as requested by some coworkers.</div>
     </div>
+
     <div class="item">
         <h2><a href="/projects/coffee-quest/">Coffee Quest</a></h2>
         <div class="description">A simple web-based game built at a 12-hour hackathon.</div>
     </div>
+
     <div class="item">
         <h2><a href="/projects/flake/">Flake</a></h2>
         <div class="description">A simple pixel poking snowflake demo with <code>&lt;canvas&gt;</code>.</div>
     </div>
+
     <div class="item">
         <h2><a href="/projects/play-and-give/">MT&L: Play and Give</a></h2>
         <div class="description">A virtual holiday card for clients of MT&L.</div>
