Added bsky-verifier to projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,11 @@ title: Projects
 
 <section class="projects">
     <div class="item">
+        <h2><a href="/projects/bsky-verifier/">Bluesky Verifier</a></h2>
+        <div class="description">A tool to find out who a trusted verifier on Bluesky has verified.</div>
+    </div>
+
+    <div class="item">
         <h2><a href="/projects/bsky-filter/">Bluesky Filter</a></h2>
         <div class="description">A simple demo app for filtering the Bluesky data firehose.</div>
     </div>
